--- a/package.json
+++ b/package.json
@@ -1,20 +1,33 @@
 {
-  "name": "load-me",
-  "version": "0.1.0",
-  "private": true,
+  "name": "custom-react-loader",
+  "version": "0.1.1",
+  "private": false,
+  "license": "MIT",
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
+    ]
+  },
   "dependencies": {
+    "@babel/cli": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "add-license": "^0.0.1",
+    "global": "^4.4.0",
     "react-scripts": "3.3.0"
+  },
+  "peerDependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "publish:npm": "./node_modules/.bin/babel src/Loader.js --out-file index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +43,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "webpack": "^4.41.5"
+  },
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/shrek-7/react-loader"
+	}
 }
